--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     background-color: #E5E5E5;
 }
 
-h1,h2,h3,h4,h5,h6,a{
+h1,h2,h3,h4,h5,h6,a,p{
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     
@@ -103,4 +103,79 @@ ul{
     position: absolute;
     top: 65%;
     left: 20%;
+}
+
+
+ /* card */
+
+.card-continer{
+    display: grid;
+    vertical-align: bottom;
+    gap: 5%;
+    padding: 10% 0 10% 25%;
+}
+
+.card{
+    width: 80%;
+    height: 496px;
+    border-radius: 24px;
+}
+
+.card-body{
+    padding-top: 14%;
+}
+
+.img-holder{
+    padding: 2%;
+}
+
+.img-fluid{
+    width: 100%;
+    height: 100%;
+}
+
+.card-title{
+    text-align: left;
+}
+
+.CANPOY{
+   text-align: left;
+}
+
+.fa-circle{
+    color: #C1C7D0;
+    font-size: 0.6rem;
+}
+
+.card-text{
+    text-align: left;
+}
+
+.tags{
+    display: flex;
+    flex-direction: row;
+    gap: 5%;
+}
+
+.tag{
+    display: flex;
+    flex-direction: row;
+    padding: 4px 12px;
+    background: #EBEBFF;
+    border-radius: 8px;
+    height: 30px;
+    color: #6070FF;
+}
+
+.action{
+    position: relative;
+    width: 50%;
+    height: 20%;
+    top: 30px;
+}
+
+.btn{
+    position: absolute;
+    left: 0%;
+    
 }
