--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     background-color: #E5E5E5;
+    padding-left: 0%;
+    margin-left:0 ;
 }
 
 h1,h2,h3,h4,h5,h6,a,p{
@@ -10,8 +12,13 @@ h1,h2,h3,h4,h5,h6,a,p{
 
 ul{
     list-style: none;
+    padding-left: 0%;
     display: flex;
     flex-direction: row;
+}
+
+.container-fluid{
+    padding: 3% 15% 7%;
 }
 
 .colored-section{
@@ -21,8 +28,7 @@ ul{
     background-repeat: no-repeat;
     background-size: 100% 90%;
     background-position:  100% 60px;
-    
-    
+   
 }
 
 .navbar-brand{
@@ -34,7 +40,8 @@ ul{
 }
 
 .navbar{
-    padding: 1% 10% 0;
+    width: 100%;
+    background-color: #fff;
 }
 
 .nav-link{
@@ -44,55 +51,41 @@ ul{
     line-height: 20px;
 }
 
-.row{
+.title-section1{
     height: 680px;
     position: relative;
-    text-align: center;
 }
 
 .social-buttons{
-    position: absolute;
-    top: 70%;
-    left: 18%;
+    margin: 2% 0% 0% 0%;
 }
+
 .emoji {
     font-size: 1.5rem;
-    margin: 3px;
     color: #505f79;
-    padding: 0 5px;
-    
+    margin-left: 10px;
   }
+.emoji1{
+    margin-left: 0px;;
+}
   
-.emoji1 {
-    padding-left: 0;
-  }
-
 .big-header{
-    display: flex;
-    width: 32%;
-    margin-bottom: 1%;
     color: #091E42;
     font-weight: 700;
     font-size: 48px;
     text-align: left;
-    position: absolute;
     line-height: 60px;
-    top: 30%;
-    left: 20%;
+    margin: 20% 10% 1% 0%;
 }
 
 .second-header{
-    display: flex;
-    width: 50%;
-    margin-top: 1%;
     color: #091E42;
     font-weight: 400;
     font-size: 20px;
     text-align: left;
-    position: absolute;
     line-height: 28px;
-    top: 48%;
-    left: 20%;
+    margin: 1% 16% 4% 0%;
+  
 }
 
 .lets-connect{
@@ -100,11 +93,7 @@ ul{
     color: #7f8cff;
     font-weight: 500px;
     font-size: 16px;
-    position: absolute;
-    top: 65%;
-    left: 20%;
 }
-
 
  /* card */
 
@@ -112,12 +101,11 @@ ul{
     display: grid;
     vertical-align: bottom;
     gap: 5%;
-    padding: 10% 0 10% 25%;
+    padding: 10% 10% 10% 10%;
+    margin-bottom: 20%;
 }
 
 .card{
-    width: 80%;
-    height: 496px;
     border-radius: 24px;
 }
 
@@ -127,11 +115,6 @@ ul{
 
 .img-holder{
     padding: 2%;
-}
-
-.img-fluid{
-    width: 100%;
-    height: 100%;
 }
 
 .card-title{
@@ -148,6 +131,7 @@ ul{
 }
 
 .card-text{
+    margin: 5% 0% 5% 0%;
     text-align: left;
 }
 
@@ -158,8 +142,6 @@ ul{
 }
 
 .tag{
-    display: flex;
-    flex-direction: row;
     padding: 4px 12px;
     background: #EBEBFF;
     border-radius: 8px;
@@ -168,14 +150,73 @@ ul{
 }
 
 .action{
-    position: relative;
-    width: 50%;
-    height: 20%;
-    top: 30px;
+   margin: 5% 0% 5% 0% ;
+    
 }
 
-.btn{
-    position: absolute;
-    left: 0%;
-    
+.section-3{
+    background-color: #fff;
+    border-top-right-radius: 9%;
+}
+
+.third-title{
+    margin: 20% 5% 5% 0%;
+
+}
+.about-my-self{
+    font-weight: 700;
+    font-size: 40px;
+    color: #091e42;
+    line-height: 52px;
+}
+
+.section3-text{
+    color: #344563;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.social-buttons1{
+    margin: 5% 0% 5% 0%;
+}
+
+/* section 4 */
+
+.section-4{
+    background-color: #6070FF;
+    background-image: url(images/section-4.png);
+    background-repeat: no-repeat;
+    background-size: 100% 90%;
+    background-position:  90% 60px;
+    border-top-left-radius: 9%;
+}
+
+.contact-me{
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+    color: #fff;
+    margin: 0% 0% 0% 40%;
+}
+
+.section4-about{
+    color: #EBEBFF;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+    margin: 1% 30% 6% 30%;
+}
+
+.form{
+    margin: 1% 30% 1% 30%;
+}
+
+.form-control{
+    margin: 0% 0% 3% 0%;
+}
+
+.last-btn{
+    margin: 0% 0% 0% 40%;
 }
