adding the drop list

--- a/style.css
+++ b/style.css
@@ -181,6 +181,12 @@ ul{
     margin: 5% 0% 5% 0%;
 }
 
+.sills-list{
+    margin-top: 20%;
+}
+
+
+
 /* section 4 */
 
 .section-4{
@@ -220,3 +226,5 @@ ul{
 .last-btn{
     margin: 0% 0% 0% 40%;
 }
+
+
